# bundlefabric

./: .gitignore  ARCHITECTURE.md  BUNDLE_SPEC.md  DEMO.md  Dockerfile  LICENSE  README.md  ROADMAP.md  STACK.md  docker-compose.yml  friends.yaml  logging_config.py  prometheus.yml  requirements.txt
auth/: jwt_auth.py  oauth_router.py
bundles/bundle-gtm-debug/: manifest.yaml
bundles/bundle-gtm-debug/prompts/: system.md
bundles/bundle-gtm-debug/signatures/: bundle.sig
bundles/bundle-linux-ops/: manifest.yaml
bundles/bundle-linux-ops/prompts/: system.md
bundles/bundle-linux-ops/signatures/: bundle.sig
bundles/fusion-bundle-gtm-debug-bundle-linux-ops-9aafede0/: manifest.yaml
bundles/fusion-bundle-gtm-debug-bundle-linux-ops-9aafede0/prompts/: system.md
demo/: demo.sh  demo_client.py
factory/: __init__.py  builder.py  evaluator.py  fusion.py  loader.py  meta_agent.py
mcp/: Dockerfile  README.md  __main__.py  pyproject.toml
mcp/src/bundlefabric_mcp/: __init__.py  __main__.py  auth.py  client.py  config.py  server.py
memory/: __init__.py  history_manager.py  rag_manager.py
mesh/: bundle_registry.py  friend_mesh.py
models/: __init__.py  bundle.py  intent.py
nginx/: bundlefabric.conf
orchestrator/: __init__.py  bundle_resolver.py  deerflow_client.py  intent_engine.py  main.py
scripts/: deploy.sh  sync-mac.sh
security/: crypto_manager.py
webui/: index.html
