[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bundlefabric-mcp"
version = "1.0.0"
description = "BundleFabric MCP Server — expose Cognitive OS bundles as MCP tools"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "BundleFabric", email = "admin@bundlefabric.org" }]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx[asyncio]>=0.27.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
bundlefabric-mcp = "bundlefabric_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bundlefabric_mcp"]

[tool.hatch.metadata]
allow-direct-references = true
